Disable scrolling zoom on maps, fixed word break on datatables

--- a/app/assets/stylesheets/components/datatables.scss
+++ b/app/assets/stylesheets/components/datatables.scss
@@ -40,3 +40,7 @@ table.dataTable, table.dataTable td, table.dataTable th {
   margin: 10px 0;
   color: $grey-cb;
 }
+
+table.dataTable td {
+  word-break: break-all;
+}
